force-app/main/default/objects/SFDC_Channel_Budget__c/fields/Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget__c</fullName>
    <description>Allocated less committed. (i.e. initial budgeted amount less the the sum of approved requests).</description>
    <formula>Allocated_Budget__c  -  Approved_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>