force-app/main/default/objects/SFDC_Channel_Budget__c/fields/nbsp__c.field-meta.xml
<CustomField>
    <fullName>nbsp__c</fullName>
    <description>Layout spacer</description>
    <label>&amp;nbsp;</label>
    <length>1</length>
    <type>Text</type>
</CustomField>