force-app/main/default/objects/SFDC_Channel_Budget__c/fields/Refresh__c.field-meta.xml
<CustomField>
    <fullName>Refresh__c</fullName>
    <description>Refreshes the budget balances by adding up the approved requests and claims from the related lists.</description>
    <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N30000000D0Mw&amp;eid=&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.FileDownload?file=0153000000074DG&quot;, &quot;Refresh Budget Balances&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Balances</label>
    <type>Text</type>
</CustomField>